==> 3095136605lzx-hub/Esp32S3_MP3/lib/OLED/OLED.cpp <==
#include "OLED.h"
#include "OLED_Font.h"
#define OLED_ADDR 0x3C

void OLED_WriteCommand(uint8_t command)
{
    Wire.beginTransmission(OLED_ADDR);
    Wire.write(0x00); 
    Wire.write(command);
    Wire.endTransmission();
}

void OLED_WriteData(uint8_t data)
{
    Wire.beginTransmission(OLED_ADDR);
    Wire.write(0x40); 
    Wire.write(data);
    Wire.endTransmission();
}

void OLED_Init(void)
{
    Wire.begin(SDA_Pin, SCL_Pin);
    delay(100); 

    OLED_WriteCommand(0xAE); // Display OFF
    OLED_WriteCommand(0x20); // Set Memory Addressing Mode
    OLED_WriteCommand(0x10); // 00,Horizontal Addressing Mode;01,Vertical Addressing Mode;10,Page Addressing Mode (RESET);11,Invalid
    OLED_WriteCommand(0xB0); // Set Page Start Address for Page Addressing Mode,0-7
    OLED_WriteCommand(0xC8); // Set COM Output Scan Direction       
    OLED_WriteCommand(0x00); // ---set low column address
    OLED_WriteCommand(0x10); // ---set high column address
    OLED_WriteCommand(0x40); // --set start line address
    OLED_WriteCommand(0x81); // --set contrast control register
    OLED_WriteCommand(0xFF); // Set SEG Output Current Brightness
    OLED_WriteCommand(0xA1); // Set SEG/Column Mapping     0xA0左右反置 0xA1正常
    OLED_WriteCommand(0xA6); // Set Normal/Inverse Display 0xA6正常 0xA7反相显示
    OLED_WriteCommand(0xA8); // --set multiplex ratio(1 to 64)
    OLED_WriteCommand(0x3F); // --1/64 duty
    OLED_WriteCommand(0xA4); // 0xa4,Output follows RAM content;0xa5,Output ignores RAM content
    OLED_WriteCommand(0xD3); // -set display offset
    OLED_WriteCommand(0x00); // -not offset
    OLED_WriteCommand(0xD5); // --set display clock divide ratio/oscillator frequency
    OLED_WriteCommand(0xF0); // --set divide ratio
    OLED_WriteCommand(0xD9); // --set pre-charge period
    OLED_WriteCommand(0x22); // --set pre-charge period
    OLED_WriteCommand(0xDA); // --set com pins hardware configuration
    OLED_WriteCommand(0x12);
    OLED_WriteCommand(0xDB); // --set vcomh
    OLED_WriteCommand(0x20); // 0x20,0.77xVcc
    OLED_WriteCommand(0x8D); // --set DC-DC enable
    OLED_WriteCommand(0x14); //
    OLED_WriteCommand(0xAF); // Display ON

    // delay(100); 

    OLED_Clear();
}
